# CONNECT-HUB-Api-Gateway/cmd/docs/swagger.json
@@ -615,7 +615,47 @@
                 }
             }
         },
-        "/chat": {
+        "/jobseeker/appliedjobs": {
+            "get": {
+                "security": [
+                    {
+                        "BearerTokenAuth": []
+                    }
+                ],
+                "description": "Retrieve the jobs that a job seeker has applied for",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Jobseeker Job Management"
+                ],
+                "summary": "Get applied jobs",
+                "responses": {
+                    "200": {
+                        "description": "Successfully retrieved applied jobs",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Failed to retrieve applied jobs: missing or incorrect parameters",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error: failed to retrieve applied jobs",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/jobseeker/chat/message": {
             "post": {
                 "security": [
                     {
@@ -660,46 +700,6 @@
                     },
                     "400": {
                         "description": "Failed to retrieve chat details or incorrect data format",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/jobseeker/appliedjobs": {
-            "get": {
-                "security": [
-                    {
-                        "BearerTokenAuth": []
-                    }
-                ],
-                "description": "Retrieve the jobs that a job seeker has applied for",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Jobseeker Job Management"
-                ],
-                "summary": "Get applied jobs",
-                "responses": {
-                    "200": {
-                        "description": "Successfully retrieved applied jobs",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    },
-                    "400": {
-                        "description": "Failed to retrieve applied jobs: missing or incorrect parameters",
-                        "schema": {
-                            "$ref": "#/definitions/response.Response"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal server error: failed to retrieve applied jobs",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
@@ -1999,6 +1999,58 @@
                     },
                     "500": {
                         "description": "Internal server error: failed to get applied candidates",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/recruiter/chat/message": {
+            "post": {
+                "security": [
+                    {
+                        "BearerTokenAuth": []
+                    }
+                ],
+                "description": "Retrieves chat details based on the provided request.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Recruiter Chat Management"
+                ],
+                "summary": "Get Chat Details",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Chat Request Data",
+                        "name": "chatRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ChatRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Chat details retrieved successfully",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Failed to retrieve chat details or incorrect data format",
                         "schema": {
                             "$ref": "#/definitions/response.Response"
                         }
